data/derived/comb/progs/unify/prog2213.ml.out
Characters 133-141:
  | 0 -> buildX()
         ^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         bool
